Fix duplicate skills section

--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
                             <strong>Alpian</strong>,
                             the new first digital Swiss private bank, in Geneva/Lausanne, as a <strong>DevOps & Cloud
                                 Automation Engineer</strong>
-                            on <strong>GCP, Kubernetes</strong> (GKE) and <strong>Terraform</strong></p></li>
+                            on <strong>GCP, Kubernetes</strong> (GKE), <strong>Terraform</strong> and GitHub Actions</p></li>
                         <li style="
                             margin-left: -2px;"><p><img src="ressource/icon/certification.svg" height="30px"/> Certified
                             in both <strong>Azure &
@@ -197,18 +197,15 @@
                         "><p><img src="ressource/icon/logo-pr-consulting.png" height="28px"/> An ex independent <strong>Web
                             Freelancer</strong>
                             (2019-2021)</p></li>
-                        <li><p><img src="ressource/icon/school.svg" height="30px"/> Have a double diploma <strong>Computer
-                            Sciences
-                            Engineering</strong>,
-                            (speciality <strong>Software Architecture</strong>) and in <strong>Business Administration &
-                                Management</strong></p></li>
+                        <li><p><img src="ressource/icon/school.svg" height="30px"/> Diplomed of both a <strong>Computer Sciences Engineering + Master Degree</strong>,
+                            (speciality <strong>Software Architecture</strong>) and a <strong>Business Administration & Management Master Degree</strong></p></li>
                     </ul>
 
                 </div>
             </div>
             <button class="btn btn-dark btnCV" type="button" data-toggle="collapse" data-target="#bio" aria-expanded="false"
                     aria-controls="bio">
-                Plus d'infos &darr;
+                More info &darr;
             </button>
 
             <div class="collapse" id="bio">
@@ -514,213 +511,6 @@
     </table>
 </section>
 
-
-<section class="back container-fluid" id="competences">
-    <h2 class="sous_menus">Skills</h2>
-    <br/>
-    <!-- ===== Tableau des compétences ===== -->
-    <table class="table table-hover table-light table-bordered table-justify table-responsive">
-        <thead>
-        <tr class="table-dark">
-            <th scope="col" class="text-center">Tech</th>
-            <th scope="col" class="text-center" style="width: 40%;">Details</th>
-            <th scope="col" class="text-center">Preference</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr>
-            <td class="text-center middle table-justify"><strong>Cloud</strong></td>
-            <td class="text-center  table-justify">
-                <strong>Kubernetes</strong> development (<strong><a rel="noopener" target="_blank" href="https://www.credly.com/badges/b81a7f11-371b-4377-bad3-f8733c4b5540/public_url">CKA</a> & <a rel="noopener" target="_blank" href="https://www.credly.com/badges/b5e53fdf-0eea-4c5b-a1fa-7c4f4c82f31b/public_url">CKAD</a> certified</strong>), deployment and cluster administration (<strong>CKS</strong> soon!, also see <a href="ressource/document/codingame-richard-peres-03-22.pdf" rel="noopener" target="_blank">CodinGame Mars 2022</a>),
-                experience with <strong>AKS & GKE</strong>, monitoring using <strong>Prometheus & Grafana</strong><br>
-                <strong><a href="https://www.coursera.org/account/accomplishments/certificate/PYFDLQM6E47C" rel="noopener" target="_blank">
-                    GCP Fundamentals</a> &
-                    <a href="https://www.credly.com/badges/9df13180-88de-4dde-9efb-d834712b7924/public_url" rel="noopener" target="_blank">Azure Fundamentals certified</a></strong>
-                (AWS Solution Architect soon!)
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar bg-info progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                        <strong>100%</strong></div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td class="text-center middle table-justify"><strong>Devops</strong></td>
-            <td class="text-center  table-justify">
-                Containerization using <strong>Docker</strong> (see <a href="ressource/document/codingame-richard-peres-03-22.pdf" rel="noopener" target="_blank">CodinGame Mars 2022</a>).<br>
-                Infrastructure As Code using <strong>Terraform <a href="https://www.credly.com/badges/cecb848a-227b-4c6f-b553-e00ad3b36f61" target="_blank" rel="noopener">(certified)</a>.<br>
-                CI/CD automation using <a href="https://badgr.com/public/assertions/Z2KVvKgYQx-o6wfssBnfoA" target="_blank" rel="noopener"><strong>Gitlab
-                    CI Certified</strong></a></strong>, Jenkins and CircleCI<br>
-                Application <strong>testing</strong> (units / functional / integration / end-to-end) & TDD (Test Driven Development) approach
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar linux progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width: 90%">
-                        <strong>90%</strong></div>
-                </div>
-            </td>
-        </tr>
-        <tr class="lel">
-            <td class="text-center middle table-justify"><strong>Software (and Cloud) Architecture</strong></td>
-            <td class="text-center lel">
-                Distributed <strong>Micro-services</strong> architecture design (including components, deployment, communication and security)<br>
-                Programming <strong>Design Patterns</strong> design, DDD and 'clean code' approach's
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar java progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width: 100%">
-                        <strong>100%</strong></div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td class="text-center middle table-justify"><strong>Application Development</strong></td>
-            <td class="text-center  table-justify">
-                <strong>Go(lang)</strong> and JAVA</strong> (cf. <a href="ressource/document/codingame-richard-peres-03-22.pdf" rel="noopener" target="_blank">CodinGame Mars 2022</a>),
-                <strong>JavaScript</strong> (NodeJS & NestJS).<br>
-                <strong>SOLID</strong> programming and <strong>micro-services application</strong>
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar android progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width: 80%">
-                        <strong>80%</strong></div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td class="text-center middle table-justify"><strong>DB & Data/Event Stream tools</strong></td>
-            <td class="text-center  table-justify">
-                <strong>SQL & NoSQL</strong>: <strong>MongoDB, PostgreSQL</strong>, MySQL, Caching: <strong>Redis</strong>,
-                Data/Event Stream: <strong>Kafka</strong>.<br>
-                Notions in GraphSQL (Neo4J) and TimeSeries DB (InfluxDB)
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width: 70%">
-                        <strong>70%</strong></div>
-                </div>
-            </td>
-        </tr>
-        <tr>
-            <td class="text-center middle table-justify"><strong>English & French</strong></td>
-            <td class="text-center  table-justify">
-                French mother tongue and <strong>Full professional proficiency</strong> (read, spoken, written) see <a href="ressource/document/TOEIC_Richard_PERES.pdf" target="_blank" rel="noopener"><strong>TOEIC 900/990</strong></a>.<br>
-                (also some elementary proficiency in Japanese and Spanish)
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="90%" aria-valuemin="0" aria-valuemax="100"
-                         style="width: 90%; background-color: darkred">
-                        <strong>90%</strong></div>
-                </div>
-            </td>
-        </tr>
-
-
-        <tr class="text-center middle table-justify">
-            <td colspan="3">
-                <button class="btn btn-dark btnProjet" type="button" data-toggle="collapse" data-target=".collapse-table"
-                        aria-expanded="false" aria-controls="skills-more1 skills-more2 skills-more3 skills-more4 skills-more5"
-                        style="padding: 1.5vh !important;">
-                    See more skills &darr;
-                </button>
-            </td>
-        </tr>
-
-        <tr class="collapse collapse-table" id="skills-more1">
-            <td class="text-center middle table-justify"><strong>Web</strong></td>
-            <td class="text-center  table-justify">
-                HTML/CSS/PHP, <strong>Framework JavaScript/TypeScript (Vue/ViteJS, Angular, React ...)</strong>,
-                & CMS WordPress et PrestaShop, référencement SEO et SEA, <strong>administration de sites web et
-                serveurs</strong>, <a href="ressource/document/Certification_Google_Digital_Active.pdf" target="_blank" rel="noopener">
-                <strong>Certification Google Digital Active</strong>
-            </a>
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="75%" aria-valuemin="0" aria-valuemax="100"
-                         style="width: 75%; background-color: mediumpurple">
-                        <strong>65%</strong></div>
-                </div>
-            </td>
-        </tr>
-
-        <tr class="collapse collapse-table" id="skills-more2">
-            <td class="text-center middle table-justify"><strong>Gestion de projet</strong></td>
-            <td class="text-center  table-justify">
-                <strong>Agile KANBAN et SCRUM</strong>, sprint planning / review, analyse des risques,
-                sizing des <strong>tâches</strong>, <strong>User Stories</strong> (epic / technical / task)
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="70%" aria-valuemin="0" aria-valuemax="100"
-                         style="width: 70%; background-color: rgb(145,126,25)">
-                        <strong>65%</strong></div>
-                </div>
-            </td>
-        </tr>
-
-        <tr class="collapse collapse-table" id="skills-more3">
-            <td class="text-center middle table-justify"><strong>Analyse financière et comptable</strong></td>
-            <td class="text-center  table-justify">
-                <strong>Résultat et Bilan comptable</strong>, comptes d'entreprises,
-                <strong>diagnostic</strong> financier de l'entreprise
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="65%" aria-valuemin="0" aria-valuemax="100"
-                         style="width: 65%; background-color: indianred">
-                        <strong>70%</strong></div>
-                </div>
-            </td>
-        </tr>
-        <tr class="collapse collapse-table" id="skills-more4">
-            <td class="text-center middle table-justify"><strong>Élaboration Business Plan et Business Model</strong>
-            </td>
-            <td class="text-center  table-justify">
-                <strong>Lean Canva</strong>, prévision des dépenses / recette, <strong>stratégie</strong> commerciale,
-                présentation professionnelle d'un <strong>projet d'innovation</strong>
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="80%" aria-valuemin="0" aria-valuemax="100"
-                         style="width: 80%; background-color: mediumseagreen">
-                        <strong>85%</strong></div>
-                </div>
-            </td>
-        </tr>
-
-        <tr class="collapse collapse-table" id="skills-more5">
-            <td class="text-center middle table-justify"><strong>Management et GRH</strong></td>
-            <td class="text-center  table-justify">
-                Droit du Travail, <strong>enjeux</strong> managériaux d'aujourd'hui, <strong>Leadership</strong>,
-                travail d'<strong>équipe</strong>
-            </td>
-            <td class="middle">
-                <div class="progress">
-                    <div class="progress-bar progress-bar-striped progress-bar-animated" role="progressbar"
-                         aria-valuenow="60%" aria-valuemin="0" aria-valuemax="100"
-                         style="width: 60%; background-color: cornflowerblue">
-                        <strong>60%</strong></div>
-                </div>
-            </td>
-        </tr>
-        </tbody>
-    </table>
-</section>
-
-
 <!-- ===== Contact ===== -->
 <section class="container-fluid contactSection" id="contact">
     <br/><br/>
@@ -736,8 +526,8 @@
 <footer class="fin">
     <blockquote class="blockquote text-center white">
         <p class="mb-0">Website exclusively made by and for Richard Peres.<br/>
-            Hosted on <a href="https://aws.amazon.com/fr/" target="_blank" rel="noopener">AWS EC2</a>.<br/><br/></p>
-        <p class="blockquote-footer">© Copyright 2022 - All rights reserved
+            Hosted on  A̶W̶S̶ ̶E̶C̶2̶  G̶C̶P̶ O̶r̶a̶c̶l̶e̶ ̶C̶l̶o̶u̶d̶ C̶u̶s̶t̶o̶m̶ ̶A̶a̶p̶a̶n̶e̶l̶ ̶s̶e̶r̶v̶e̶r̶ GitHub Pages 🙃<br/><br/></p>
+        <p class="blockquote-footer">© Copyright 2018-2023 - All rights reserved
             <br><cite title="Source Title">Richard PERES</cite></p>
     </blockquote>
 </footer>
