Fix stroke text

--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
 <footer class="fin">
     <blockquote class="blockquote text-center white">
         <p class="mb-0">Website exclusively made by and for Richard Peres.<br/>
-            Hosted on  A̶W̶S̶ ̶E̶C̶2̶  G̶C̶P̶ O̶r̶a̶c̶l̶e̶ ̶C̶l̶o̶u̶d̶ C̶u̶s̶t̶o̶m̶ ̶A̶a̶p̶a̶n̶e̶l̶ ̶s̶e̶r̶v̶e̶r̶ GitHub Pages 🙃<br/><br/></p>
+            Hosted on  <span style="text-decoration: line-through;">AWS EC2, GCP Bucket, Oracle Cloud, Customer Aapanel server,</span> GitHub Pages 🙃<br/><br/></p>
         <p class="blockquote-footer">© Copyright 2018-2023 - All rights reserved
             <br><cite title="Source Title">Richard PERES</cite></p>
     </blockquote>
